fixed text align on heading

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     font-size: 3.125rem;
     text-shadow: 0.1875rem 0.125rem black;
     font-size: 3.75rem;
-    justify-content: center;
+    text-align: center;
 }
 
 #description {
@@ -25,6 +25,8 @@ body {
     font-size: 2.5rem;
     margin-top: 0.3125rem;
     text-shadow: 0.125rem 0.125rem black;
+    text-align: center;
+
 }
 
 #survey-form {
